test_data/Json/Unexpected/Unserializable/InvalidModelType/ReferenceElement/wrong.json.exception
Expected the model type 'ReferenceElement', but got soReallyUtterlyInvalid at: modelType